--- a/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
@@ -1,5 +1,10 @@
 <div class="editbox">
   <div class="scalebox js-scalebox">
+    <a class="scale scale-default hidden" data-role="scale-default">
+      <span class="line"></span>
+      <span class="line line-dashed"></span>
+      <span class="scale-time" data-role="scale-time"></span>
+    </a>
   	<a class="scale scale-blue hidden" data-role="scale-blue">
     	<span class="line">
     	</span>
