--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -90,6 +90,9 @@
       }
     }
   }
+  .breadcrumb li.active {
+    color: #fff;
+  }
   .lesson-list { 
     border: 0;
     margin: 0;
@@ -103,6 +106,7 @@
       margin-bottom: 0;
       margin-left: 0;
       cursor: pointer;
+
       .btn-preview {
         top: 0;
         right: 0;
@@ -141,6 +145,18 @@
       &.disdragg {
         .opacity(0.3);
         cursor: default;
+      }
+    }
+    .placeholder {
+      position: relative;
+      height: 10px;
+      &:after {
+        content: "";
+        border: 5px solid;
+        border-color: transparent transparent transparent @brand-danger;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
     }
     .more-questions {
@@ -188,10 +204,12 @@
       top: 0;
       width: 70%;
       height: 60px;
-      line-height: 60px;
       .title-link {
+        float: left;
         font-size: 16px;
         color: #fff;
+        line-height: 60px;
+        margin-right: 20px;
         i {
           font-size: 16px;
         }
@@ -309,9 +327,6 @@
           .sqe-number {
             display: inline;
           }
-        }
-        .placeholder {
-          border:1px dashed @brand-primary;
         }
       }
       .scale {
