--- a/src/Topxia/WebBundle/Resources/views/Marker/preview.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/preview.html.twig
@@ -9,10 +9,8 @@
     data-lesson-id="{{ lesson.id }}"
     data-lesson-mediaid="{{ lesson.mediaId }}"
     data-hide-media-lesson-learn-btn="{{ is_feature_enabled('hide_media_lesson_learn_btn') }}">
-    	<p class="title">视频预览</p>
-    	<p class="sub-title">在这里预览视频的随堂练习、字幕等效果</p>
-    	<div class="marker-preview-player" id="lesson-video-content">
-
-    	</div>
+  	<p class="title">视频预览</p>
+  	<p class="sub-title">在这里预览视频的随堂练习、字幕等效果</p>
+  	<div class="marker-preview-player" id="lesson-video-content"></div>
 	</div>
 {% endblock %}
