--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/video.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/video.html.twig
@@ -256,16 +256,6 @@
 
     <form class="form-horizontal" id="cloud-setting-form" method="post" novalidate>
 
-      
-
-      <div class="row form-group">
-        <div class="col-md-3 control-label">
-          <label for="cloud_bucket" >{{'云视频Bucket'|trans}}</label>
-        </div>
-        <div class="controls col-md-8 radios">
-          <input type="text" id="cloud_bucket" class="form-control" name="cloud_bucket" value="{{storageSetting.cloud_bucket}}">
-        </div>
-      </div>
       <div class="row form-group">
         <div class="col-md-3 control-label">
           <label for="support_mobile">{{'手机浏览器MP4视频'|trans}}</label>
@@ -281,7 +271,7 @@
       </div>
     <div class="row form-group">
       <div class="col-md-3 control-label">
-        <label for="cloud_bucket" >{{'云视频转码类型'|trans}}</label>
+        <label >{{'云视频转码类型'|trans}}</label>
       </div>
       <div class="controls col-md-8 radios">
         <p>
