--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -23,6 +23,7 @@
 .marker-manage {
   height: 100%;
   background-color: @gray-darker;
+  overflow: hidden;
   &.slideing {
     -moz-user-select: none; 
     -khtml-user-select: none;
@@ -310,6 +311,7 @@
         height: auto;
         padding: 0;
         background-color: transparent;
+        overflow: visible;
         .item-lesson  {
           position: relative;
           padding: 0 10px;
