--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -500,6 +500,70 @@
   }
 }
 
+.show-introhelp  {
+  position: relative;
+  .introhelp-icon-help {
+    position: relative;
+    color: @brand-warning;
+    z-index: 9999999!important;
+  }
+  .introhelp-icon-drag {
+    position: relative;
+    color: #fff;
+    z-index: 9999999!important;
+  }
+  .popover {
+    display: none;
+    font-size: 12px;
+    color: @gray-darker;
+    .title {
+      color: @gray;
+      padding-bottom: 5px;
+      border-bottom: 1px solid #e6e6e6;
+      margin-bottom: 10px;
+    }
+    &.bottom {
+      top: 18px;
+      left: -77px;
+    }
+    &.left {
+      left: -230px;
+      top: 90px;
+    }
+  }
+  .introhelp-img {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    color: #fff;
+    font-size: 14px;
+    img {
+      display: block;
+      margin-left: 50px;
+    }
+  }
+  .close-introhelp {
+    float: right;
+    color: @gray;
+    cursor: pointer;
+  }
+  &.show {
+    .popover {
+     display: block;
+    }
+  }
+}
+
+.introhelp-overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  .opacity(0.5);
+  background-color: #000;
+}
+
 .marker-preview {
   height: 100%;
   background-color: #f1f4f6;
