--- a/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
@@ -1,4 +1,4 @@
-<div class="pane-question-content js-pane-question-content"
+<div class="pane-question-content js-pane-question-content show-introhelp"
 	data-marker-metas-url="
 	{{path('course_lesson_marker_metas',{'mediaId':lesson.mediaId})}}"
 	data-queston-marker-add-url="{{path('course_lesson_question_marker_add',{'courseId':course.id,'lessonId':lesson.id})}}"
@@ -7,7 +7,7 @@
 	data-marker-update-url="{{path('course_lesson_marker_update',{'courseId':course.id,'lessonId':lesson.id})}}"
 	data-queston-marker-sort-url="{{path('course_lesson_question_marker_sort',{'courseId':course.id,'lessonId':lesson.id})}}"
 	>
-		<form class="form-horizontal mark-from mrl" action="{{path('course_lesson_question_marker_search',{courseId:course.id,lessonId:lesson.id})}}" method="post" novalidate>
+		<form class="form-horizontal js-mark-from mrl" action="{{path('course_lesson_question_marker_search',{courseId:course.id,lessonId:lesson.id})}}" method="post" novalidate>
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
 			<div class="form-group">
 				<div class="col-xs-5">
@@ -35,9 +35,21 @@
 				</li>
 			</ul>
 		</div>
-		<div class="question-remask">
+		<div class="question-remask ">
 			<i class="es-icon es-icon-xinxi remask-icon"></i>仅支持选择题、判断题两类客观题。
 		</div>
-		<ul class="lesson-list gruop-lesson-list" id="subject-lesson-list" data-intro-img={{ asset('assets/v2/img/marksintro_1.png') }}  ></ul>
+		<div class="popover left" >
+			<div class="arrow"></div>
+			<div class="popover-content clearfix">
+				<p class="title">添加随堂练习，只需一步操作</p>
+				<p class="text-md">将题目拖拽到<span class='color-warning'>「视频编辑区域」</p></p>
+				<span class="close-introhelp js-close-introhelp">知道了</span>
+				<div class="introhelp-img js-introhelp-img">
+					<img src="{{ asset('assets/v2/img/marksintro_1.png') }}" class="">
+					「视频编辑区域」
+				</div>
+			</div>
+		</div>
+		<ul class="lesson-list gruop-lesson-list " id="subject-lesson-list" data-intro-img=  ></ul>
 </div>
 <script>app.load('marker/question')</script>
