--- a/src/Custom/WebBundle/Resources/public/less/login.less
+++ b/src/Custom/WebBundle/Resources/public/less/login.less
@@ -10,6 +10,7 @@ body {
   text-align: center;
   color: #22b2e9;
 }
+
 .text-controls {
   .box-shadow(0 0 0 6px #22b2e9) ;
   border-radius: 4px;
@@ -32,6 +33,8 @@ body {
 .login-full {
   height: 100%;
   background-size: cover;
+  background-position: center;
+  border: none;
   .login-section {
     color: #ffffff;
     margin: 0 auto;
