--- a/src/Custom/WebBundle/Resources/public/less/main.less
+++ b/src/Custom/WebBundle/Resources/public/less/main.less
@@ -80,6 +80,7 @@ a {
   }
   .header-title {
     display: inline-block;
+    padding-left: 40px;
     font-size: 22px;
     font-weight: bold;
     @media screen and (max-width: @screen-sm-max){
@@ -208,7 +209,6 @@ a {
 
         .title-detail {
           display: inline-block;
-          width: 230px;
           padding: 0 30px;
           .box-shadow( 0 2px 0 0 @color-primary);
         }
