--- a/src/Custom/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Default/index.html.twig
@@ -36,11 +36,11 @@
         {% endif %}
 
         {% if currentCourse.studyStatus|default() == 'learning' %}
-          <a class="btn btn-primary" target="_blank" role="button" href="{{ path('course_learn', {id:currentCourse.id}) }}#lesson/{{nextLearnLesson.id|default()}}">
+          <a class="pull-left btn btn-primary" target="_blank" role="button" href="{{ path('course_learn', {id:currentCourse.id}) }}#lesson/{{nextLearnLesson.id|default()}}">
             <i class="iconfont icon-unlock1"></i>继续学习
           </a>
         {% elseif currentCourse.studyStatus|default(false) %}
-          <button data-toggle="modal" data-target="#modal" data-url="{{ path('internal_training_course_unlock', {courseId:currentCourse.id}) }}" type="button" class="btn btn-primary"><i class="iconfont icon-lock"></i>解锁学习</button>
+          <button data-toggle="modal" data-target="#modal" data-url="{{ path('internal_training_course_unlock', {courseId:currentCourse.id}) }}" type="button" class="pull-left btn btn-primary"><i class="iconfont icon-lock"></i>解锁学习</button>
         {% else %}
         {% endif %}
 
