--- a/src/Permission/PermissionBundle/Resources/views/Templates/navigation.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Templates/navigation.html.twig
@@ -19,7 +19,7 @@
 			    title="{{m.name}}"
 			    href="{{ permission_path(tabMenu) }}"
 			  >
-			    {{ m.name }}
+			    {{ m.name|trans }}
 			</a>
 
 	    	{# {{ self_macro.menu_link_html(_context, currentMenu) }} #}
