--- a/src/Permission/PermissionBundle/Resources/views/Templates/side-bar.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Templates/side-bar.html.twig
@@ -14,7 +14,7 @@
 		    class="{{ menuClass }}"
 		    href="{{ permission_path(tabMenu) }}"
 		>
-		    {{ m.name }}
+		    {{ m.name|trans }}
 		</a>
     {% endfor %}
   </div>
