--- a/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
@@ -47,7 +47,7 @@
     <input type="text" id="keyword" name="keyword" class="form-control" value="{{ app.request.query.get('keyword') }}" placeholder="{{'关键词'|trans}}">
   </div>
 
-  <button class="btn btn-primary">搜索</button>
+  <button class="btn btn-primary">{{'搜索'|trans}}</button>
 
   {% if has_permission('admin_user_export') and is_plugin_installed('UserImporter') %}
     <a class="btn btn-primary mhs" id="user-export" data-toggle="modal" data-target="#modal" data-url="{{path('admin_user_export')}}">导出搜索结果</a>
