mark course unfinished if testpaper not pass

--- a/src/Custom/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'CustomWebBundle::layout.html.twig' %}
-{% set nextLearnLesson = currentCoursePackage.nextLearnLesson|default() %}
+{% set nextLearnLesson = currentCoursePackage.course.nextLearnLesson|default() %}
 {% set currentCourse = currentCoursePackage.course|default() %}
 {% block stylesheets %}
   {{ parent()}}
