--- a/src/Topxia/AdminBundle/Resources/views/Course/tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/tr.html.twig
@@ -61,8 +61,10 @@
   </td>
   <td>
     <div class="btn-group">
-      <a class="btn btn-default btn-sm" href="{{ path('course_manage', {id:course.id}) }}" target="_blank">{{'管理'|trans}}</a>
-
+      {% if has_permission('admin_course_content_manage') %}
+        <a class="btn btn-default btn-sm" href="{{ path('course_manage', {id:course.id}) }}" target="_blank">{{'管理'|trans}}</a>
+      {% endif %}
+      
       {% include 'PermissionBundle:Templates:group-button.html.twig' with {parentCode: 'admin_course_manage', group:'groupButton', course: course} %}
     </div>
   </td>
