--- a/src/Topxia/WebBundle/Resources/views/Default/message.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Default/message.html.twig
@@ -4,7 +4,7 @@
 
 {% set title = title|default(typeTitles[type]) %}
 
-{% block title %}{{ title }} - {{ parent() }}{% endblock %}
+{% block title %}{{ title|trans }} - {{ parent() }}{% endblock %}
 {% block head_scripts %}{{ script|default('')|raw }}{% endblock %}
 {% set script_controller = 'default/message' %}
 
@@ -13,9 +13,9 @@
 <div id="page-message-container" class="page-message-container" data-goto="{{ goto }}" data-duration={{ duration }}>
   <div class="page-message-panel">
     <div class="page-message-heading">
-      <h2 class="page-message-title">{{ title }}</h2>
+      <h2 class="page-message-title">{{ title|trans }}</h2>
     </div>
-    <div class="page-message-body">{{ message|default('') }}</div>
+    <div class="page-message-body">{{ message|default('')|trans }}</div>
   </div>
 </div>
 {% endblock %}
