--- a/src/Topxia/AdminBundle/Resources/views/System/user-fields.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/user-fields.html.twig
@@ -20,7 +20,7 @@
         <th>{{'是否显示'|trans}}</th>
         <th>{{'显示序号'|trans}}</th>
         <!-- <th>创建时间</th> -->
-        <th>{{'s操作'|trans}}</th>
+        <th>{{'操作'|trans}}</th>
       </tr>
       </thead>
       <tbody>
