--- a/src/Topxia/WebBundle/Resources/views/Default/header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Default/header.html.twig
@@ -20,7 +20,7 @@
     </div>
     <a href="{{ path('homepage') }}" class="navbar-brand">
       {% if setting('site.logo') %}
-       {{ lazy_img(filepath('../' ~ setting('site.logo'),''), '', '', '') }}
+       {{ lazy_img(filepath('../' ~ setting('site.logo'),''), '', setting('site.name', 'EDUSOHO'), '') }}
       {% else %}
         {{ setting('site.name', 'EDUSOHO') }}
       {% endif %}
