--- a/web/assets/v2/less/common.less
+++ b/web/assets/v2/less/common.less
@@ -119,3 +119,41 @@ select:-webkit-autofill {
     .text-overflow;
   }
 }
+
+// 直播提示
+.modal-live-remind {
+  .modal-body {
+    padding: 40px;
+  }
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  .media-left img {
+    width: 160px;
+    max-width: 160px;
+  }
+  .media-body h4 {
+    color: @gray-darker;
+    font-size: 16px;
+    // margin-bottom: 10px;
+  }
+  .media-body p {
+    color: @gray;
+    font-size: 12px;
+  }
+  .live-countdown {
+    font-size: 22px;
+    color: @gray-darker;
+    margin-bottom: 20px;
+    text-align: center;
+    span {
+      color: @brand-warning;
+      font-size: 40px;
+    }
+  }
+  .btn {
+    width: 300px;
+  }
+}
