--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
@@ -4,12 +4,17 @@
 {% do load_script('course/common') %}
 
 {% if member %}
-  {% include 'TopxiaWebBundle:Course:Part/normal-header-for-member.html.twig' %}
+  {% cache 'course/' ~ course.id ~ 'normal/header/for/member' 600 %}
+    {% include 'TopxiaWebBundle:Course:Part/normal-header-for-member.html.twig' %}
+  {% endcache %}
 {% elseif course.parentId|default(false) %}
-  {% include 'TopxiaWebBundle:Course:Part/normal-header-for-guest.html.twig' with {source:"classroom"} %}
+  {% cache 'course/' ~ course.id ~ '/classroom/course/normal/header/for/guest' 600 %}
+    {% include 'TopxiaWebBundle:Course:Part/normal-header-for-guest.html.twig' with {source:"classroom"} %}
+  {% endcache %}
 {% else %}
-
-  {% include 'TopxiaWebBundle:Course:Part/normal-header-for-guest.html.twig' %}
+  {% cache 'course/' ~ course.id ~ '/not/classroom/course/normal/header/for/guest' 600 %}
+    {% include 'TopxiaWebBundle:Course:Part/normal-header-for-guest.html.twig' %}
+  {% endcache %}
 {% endif %}
 
 {% macro picture(course, previewLesson) %}
