--- a/src/Topxia/WebBundle/Resources/views/Course/normal-layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/normal-layout.html.twig
@@ -61,4 +61,6 @@
           {{ render(controller('HowzhiPopAdBundle:HowzhiPop:index')) }}
      {% endif %} 
 
+     {% include 'TopxiaWebBundle:Default:live-course-guide.html.twig' %}
+
 {% endblock %}
