--- a/src/Topxia/WebBundle/Resources/views/Course/info.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/info.html.twig
@@ -9,7 +9,7 @@
     <div class="es-piece">
       <div class="piece-body p-lg clearfix">
         {% if course.about %}
-          {{ content_img_add_CDN(course.about)|raw }}
+          {{ add_cdn_to_img_tag(course.about)|raw }}
         {% else %}
           <div class="text-muted">{{'暂无课程简介'|trans}}</div>
         {% endif %}
