--- a/src/Topxia/WebBundle/Resources/views/Common/share-dropdown.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Common/share-dropdown.html.twig
@@ -1,35 +1,35 @@
 {% if type == 'course' %}
   {% set title = course.title %}
   {% set summary = course.about|plain_text(50) %}
-  {% set message = setting('default.courseShareContent')|default('我正在学习《%course%》，收获巨大哦，一起来学习吧！'|trans({'%course%':course.title})) %}
+  {% set message = setting('default.courseShareContent')|replace({'{{':'《%','}}':'%》'})|default('我正在学习《%course%》，收获巨大哦，一起来学习吧！')|trans({'%course%':course.title}) %}
   {% set url = url('course_show', {id:course.id}) %}
   {% set picture = filepath(course.largePicture, 'course.png') %}
   {% set id = course.id%}
 {% elseif type == 'classroom' %}
   {% set title = classroom.title %}
   {% set summary = classroom.about|plain_text(50) %}
-  {% set message = setting('default.classroomShareContent')|default('我正在学习「%classroom%」，收获巨大哦，一起来学习吧！'|trans({'%classroom%':classroom.title})) %}
+  {% set message = setting('default.classroomShareContent')|replace({'{{':'「%','}}':'%」'})|default('我正在学习「%classroom%」，收获巨大哦，一起来学习吧！')|trans({'%classroom%':classroom.title}) %}
   {% set url = url('classroom_show', {id:classroom.id}) %}
   {% set picture = filepath(classroom.largePicture, 'classroom.png') %}
   {% set id = classroom.id%}
 {% elseif type ==  'article' %}
   {% set title = article.title %}
   {% set summary = article.body|plain_text(50) %}
-  {% set message = setting('default.articleShareContent')|default('我正在看「%articletitle%」，关注「%sitename%」，分享知识，成就未来。'|trans({'%articletitle%':article.title,'%sitename%':setting('site.name')})) %}
+  {% set message = setting('default.articleShareContent')|replace({'{{':'「%','}}':'%」'})|default('我正在看「%articletitle%」，关注「%sitename%」，分享知识，成就未来。')|trans({'%articletitle%':article.title,'%sitename%':setting('site.name')}) %}
   {% set url = url('article_detail', {id:article.id}) %}
   {% set picture = '' %}
   {% set id = article.id%}
 {% elseif type == 'group_thread' %}
   {% set title = thread.title %}
   {% set summary = thread.content|plain_text(50) %}
-  {% set message = setting('default.groupShareContent')|default('我正在「%groupname%」小组，看到「%threadname%」，很不错哦，一起来看看吧！'|trans({'%groupname%':group.title,'%threadname%':thread.title})) %}
+  {% set message = setting('default.groupShareContent')|replace({'{{':'「%','}}':'%」'})|default('我正在「%groupname%」小组，看到「%threadname%」，很不错哦，一起来看看吧！')|trans({'%groupname%':group.title,'%threadname%':thread.title}) %}
   {% set url = url('group_thread_show', {id:group.id, threadId:thread.id}) %}
   {% set picture = '' %}
   {% set id = group.id%}
 {% elseif type == 'open_course' %}
   {% set title = course.title %}
   {% set summary = course.about|plain_text(50) %}
-  {% set message = setting('default.courseShareContent')|default('我正在学习{{course}}，收获巨大哦，一起来学习吧！'|trans)|simple_template({course: '《' ~ course.title ~ '》'}) %}
+  {% set message = setting('default.courseShareContent')|replace({'{{':'《%','}}':'%》'})|default('我正在学习《%course%》，收获巨大哦，一起来学习吧！')|trans({'%course%':course.title}) %}
   {% set url = url('open_course_show', {courseId:course.id}) %}
   {% set picture = filepath(course.largePicture, 'course.png') %}
   {% set id = course.id%}
